--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -19,8 +19,8 @@
                     <form method="post" class="border border-gray-300">
                         {% csrf_token %}
                         <div class ="px-3 py-2  max-w-sm">
-                            <label for="{{ form.username.id_for_label }}" class="px-3 py-2">Username:</label>
-                            <input type="text" name="username" id="{{ form.username.id_for_label }}" class="w-100px px-3 py-2 border border-gray-300  focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary" required>
+                            <label for="{{ form.username.id_for_label }}" class="px-3 py-2">Email:</label>
+                            <input type="email" name="username" id="{{ form.username.id_for_label }}" class="w-100px px-3 py-2 border border-gray-300  focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary" placeholder="Enter your email address" required>
                         </div>
                         <div class ="px-3 py-2 max-w-sm">
                             <label for="{{ form.password.id_for_label }}" class="px-3 py-2">Password:</label>
